# TheAlgorithms

./: .gitignore  Cargo.toml  README.md  book.toml  leetcode  pandoc.toml
.github/workflows/: rust.yml
algs4/: Cargo.toml  README.md
algs4/ch1/: Cargo.toml
algs4/ch2/: Cargo.toml
algs4/searching/: Cargo.toml
algs4/sorting/: Cargo.toml
array/: Cargo.toml
array/benches/: reverse.rs  rotate.rs
array/src/: circular_buffer.rs  lib.rs  prefix_sum.rs  reverse.rs  ring_buffer.rs  rotate.rs
backtracking/: Cargo.toml
bit_manipulation/: Cargo.toml
bit_manipulation/benches/: count_ones.rs  trailing_zeros.rs
bit_manipulation/src/: binary_count_trailing_zeros.rs  count_number_of_one_bits.rs  lib.rs  swap_number.rs
bitwise/: Cargo.toml
bitwise/src/: is_even.rs  is_power_of_two.rs  lib.rs  swap_number.rs
book/: SUMMARY.md  dsa-geeksforgeeks.md
book/deque/: index.md
book/geeksforgeeks/: most-import-type-of-algorithms.md  role-of-algs.md
book/hash-table/: concurrent-hash-map.md  index.md
book/methodology/: index.md
book/others/: index.md
book/priority-queue/: dual-priority-queue.md
book/skiplist/: index.md
book/stack/: index.md
book/strings/: index.md
boolean_gates/: Cargo.toml
boolean_gates/src/: and_gate.rs  lib.rs  nand_gate.rs  nor_gate.rs  not_gate.rs  or_gate.rs  xnor_gate.rs  xor_gate.rs
c/: README.md
c/oop/: CMakeLists.txt  Makefile  button.c  button.h  main.c  object.c  object.h  widget.c  widget.h
c/struct_size/: .gitignore  CMakeLists.txt  Makefile  README.md  size.c  size.cpp
c/thread/: CMakeLists.txt  three-threads.cpp  three_threads.cpp  three_threads_atomic.cpp
cds/src/: lib.rs  lock_coupling_linked_list.rs
cii/: CMakeLists.txt  todo.md
cii/include/cii/: arith.h  array.h  array_rep.h  assert.h  atom.h  bit.h  except.h  hash.h  list.h  mem.h  ring.h  seq.h  set.h  table.h  xp.h
cii/src/: arith.c  array.c  assert.c  atom.c  bit.c  except.c  hash.c  list.c  mem.c  mem_test.c  mem_test.h  ring.c  seq.c  set.c  table.c  xp.c
cii/tests/: get_word.c  get_word.h  list_test.c  mem_test.c  mem_test.h  table_test.c  wf.c  wf.h  word_count.cpp  word_count.py  word_count.rs
ciphers/: Cargo.toml
ciphers/src/: a1z26.rs  base16.rs  crc16.rs  crc32.rs  crc64.rs  lib.rs  morse_code.rs  rot13.rs
conversions/: Cargo.toml  README.md
conversions/src/: astronomical_length.rs  binary_to_decimal.rs  binary_to_hexadecimal.rs  binary_to_octal.rs  energy.rs  error.rs  excel_title_to_column.rs  hex_to_bin.rs  length.rs  lib.rs  molecular_chemistry.rs  pressure.rs  rgb_hsv.rs  roman_numerals.rs  (+4 more)
cpp/: CMakeLists.txt
cpp/0001.two-sum/: CMakeLists.txt  main.cpp
cpp/0003.longest-substring-without-repeating-characters/: main.c
cpp/0005.longest-palindromic-substring/: CMakeLists.txt  main.cpp
cpp/0011.container-with-most-water/: CMakeLists.txt
cpp/0016.3sum-closest/: CMakeLists.txt
cpp/0020.valid-parentheses/: CMakeLists.txt
cpp/0029.divide-two-integers/: CMakeLists.txt  main.cpp
cpp/0053.maximum-subarray/: CMakeLists.txt
cpp/0062.unique-paths/: CMakeLists.txt
cpp/0069.sqrtx/: CMakeLists.txt
cpp/0092.reverse-linked-list-ii/: CMakeLists.txt
cpp/0093.restore-ip-addresses/: CMakeLists.txt
cpp/0107.binary-tree-level-order-traversal-ii/: CMakeLists.txt
cpp/0136.single-number/: CMakeLists.txt
cpp/0160.intersection-of-two-linked-lists/: main.c
cpp/0414.third-maximum-number/: CMakeLists.txt
cpp/0445.add-two-numbers-ii/: CMakeLists.txt
cpp/0605.can-place-flowers/: CMakeLists.txt
cpp/0628.maximum-product-of-three-numbers/: main.cpp
cpp/0665.non-decreasing-array/: CMakeLists.txt
data-structures/: 02.信息结构.md  README.md
data_structures/: Cargo.toml
ds/: 01.简介.md  03.树.md  CMakeLists.txt  README.md
ds/src/2.信息结构/: CMakeLists.txt  linked_stack.c  list_test.cpp
dynamic_programming/: Cargo.toml
electronics/: Cargo.toml
euler/: README.md
financial/: Cargo.toml
geodesy/: Cargo.toml
graph/: Cargo.toml
graphs/: Cargo.toml
leetcode/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  book.toml  index.md
list/: Cargo.toml
math/: Cargo.toml
od/: Cargo.toml  book.toml
physics/: Cargo.toml
priority_queue/: Cargo.toml
problems/: README.md  index.md
project_euler/: Cargo.toml  todo.md
robert/: CMakeLists.txt  Cargo.toml  README.md
rust/: README.md  SUMMARY.md  solutions.md
search/: Cargo.toml
searches/: Cargo.toml
sort/: Cargo.toml
sort/benches/: bubble_sort.rs  bucket_sort.rs  counting_sort.rs  gnome_sort.rs  insertion_sort.rs  merge_sort.rs  quicksort.rs  selection_sort.rs  shell_sort.rs  timsort.rs
sort/src/: binary_heap.rs  bubble_sort.rs  bucket_sort.rs  counting_sort.rs  double_sort.rs  gnome_sort.rs  heap_sort.rs  insertion_sort.rs  lib.rs  merge_sort.rs  odd_even_sort.rs  quick_sort.rs  quicksort.rs  radix_sort.rs  selection_sort.rs  shaker_sort.rs  shell_sort.rs  timsort.rs  util.rs
sorts/: Cargo.toml
src/: README.md  SUMMARY.md  index.md  leetcode  part1-ds.md  part2-algs.md  refs.md
src/leetcode/1141.user-activity-for-the-past-30-days-i/: Cargo.toml  diesel.toml  solution.sql
src/leetcode/1141.user-activity-for-the-past-30-days-i/migrations/2024-08-01-080910_activity/: up.sql
src/leetcode/1141.user-activity-for-the-past-30-days-i/src/: schema.rs
src/leetcode/1965.employees-with-missing-information/: Cargo.toml  diesel.toml  docker-compose.yml  solution.sql
src/leetcode/1965.employees-with-missing-information/migrations/2024-08-01-071704_employees/: down.sql  up.sql
src/leetcode/1965.employees-with-missing-information/migrations/2024-08-01-071836_salaries/: down.sql  up.sql
src/leetcode/1965.employees-with-missing-information/src/: main.rs  schema.rs
stack/: Cargo.toml
system_design/: Cargo.toml
theme/: index.hbs
tools/: publish-book.sh
tree/: Cargo.toml
vector/: Cargo.toml
weiss/: CMakeLists.txt  Cargo.toml  README.md
weiss/c/: CMakeLists.txt  linked_list.h  polynomial_array.c
weiss/c02/: Cargo.toml
weiss/c03/: CMakeLists.txt  Cargo.toml  linked_list.c  linked_list.h  polynomial_array.h
weiss/src/: pow.rs  subsequence_of_sum.rs
(+10227 files in other folders)
