[workspace]
resolver = "2"

members = [
    "array",
    "backtracking",
    "bit_manipulation",
    "cds",
    "ciphers",
    "conversions",
    "deque",
    "dynamic_programming",
    "graph",
    "hash_table",
    "list",
    "math",
    "priority_queue",
    "queue",
    "search",
    "sort",
    "src/leetcode/0*.*",
    "src/leetcode/1*.*",
    "src/leetcode/2*.*",
    "src/leetcode/3*.*",
    "stack",
    "string",
    "tree",
    "vector",
]

[profile.release]
debug = true
lto = true
