[workspace]
resolver = "2"

members = [
    "array",
    "backtracking",
    "bit_manipulation",
    "cds",
    "ciphers",
    "conversions",
    "deque",
    "dynamic_programming",
    "graph",
    "hash_table",
    "list",
    "math",
    "matrix",
    "priority_queue",
    "queue",
    "search",
    "sort",
    "stack",
    "string",
    "tree",
    "vector",
]

exclude = []

[profile.release]
debug = true
lto = true
