
cmake_minimum_required(VERSION 3.10)
project(leetcode-cpp)

add_subdirectory(0001.two-sum)
add_subdirectory(0002.add-two-numbers)
add_subdirectory(0003.longest-substring-without-repeating-characters)
add_subdirectory(0005.longest-palindromic-substring)
add_subdirectory(0007.reverse-integer)
add_subdirectory(0008.string-to-integer-atoi)
add_subdirectory(0011.container-with-most-water)
add_subdirectory(0014.longest-common-prefix)
add_subdirectory(0015.3sum)
add_subdirectory(0016.3sum-closest)
add_subdirectory(0018.4sum)
add_subdirectory(0019.remove-nth-node-from-end-of-list)
add_subdirectory(0020.valid-parentheses)
add_subdirectory(0021.merge-two-sorted-lists)
#add_subdirectory(0025.reverse-nodes-in-k-group)
add_subdirectory(0026.remove-duplicates-from-sorted-array)
add_subdirectory(0027.remove-element)
#add_subdirectory(0031.next-permutation)
add_subdirectory(0034.find-first-and-last-position-of-element-in-sorted-array)
#add_subdirectory(0035.search-insert-position)
#add_subdirectory(0053.maximum-subarray)
add_subdirectory(0061.rotate-list)
#add_subdirectory(0062.unique-paths)
add_subdirectory(0066.plus-one)
add_subdirectory(0069.sqrtx)
add_subdirectory(0070.climbing-stairs)
add_subdirectory(0082.remove-duplicates-from-sorted-list-ii)
add_subdirectory(0083.remove-duplicates-from-sorted-list)
add_subdirectory(0086.partition-list)
add_subdirectory(0088.merge-sorted-array)
add_subdirectory(0092.reverse-linked-list-ii)
add_subdirectory(0093.restore-ip-addresses)
add_subdirectory(0098.validate-binary-search-tree)
add_subdirectory(0101.symmetric-tree)
add_subdirectory(0102.binary-tree-level-order-traversal)
add_subdirectory(0103.binary-tree-zigzag-level-order-traversal)
add_subdirectory(0107.binary-tree-level-order-traversal-ii)
add_subdirectory(0108.convert-sorted-array-to-binary-search-tree)
add_subdirectory(0114.flatten-binary-tree-to-linked-list)
add_subdirectory(0139.word-break)
add_subdirectory(0141.linked-list-cycle)
add_subdirectory(0142.linked-list-cycle-ii)
add_subdirectory(0144.binary-tree-preorder-traversal)
add_subdirectory(0160.intersection-of-two-linked-lists)
#add_subdirectory(0162.find-peak-element)
add_subdirectory(0191.number-of-1-bits)
#add_subdirectory(0199.binary-tree-right-side-view)
#add_subdirectory(0200.number-of-islands)
add_subdirectory(0203.remove-linked-list-elements)
add_subdirectory(0206.reverse-linked-list)
#add_subdirectory(0215.kth-largest-element-in-an-array)
add_subdirectory(0234.palindrome-linked-list)
add_subdirectory(0237.delete-node-in-a-linked-list)
add_subdirectory(0308.odd-even-linked-list)
add_subdirectory(0414.third-maximum-number)
#add_subdirectory(0443.string-compression)
add_subdirectory(0445.add-two-numbers-ii)
add_subdirectory(0605.can-place-flowers)
add_subdirectory(0628.maximum-product-of-three-numbers)
add_subdirectory(0665.non-decreasing-array)
#add_subdirectory(0695.max-area-of-island)
add_subdirectory(0704.binary-search)
#add_subdirectory(0994.rotting-oranges)
#add_subdirectory(1090.largest-values-from-labels)
#add_subdirectory(1423.maximum-points-you-can-obtain-from-cards)
