[package]
name = "sort"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bubble_sort"
harness = false

[[bench]]
name = "bucket_sort"
harness = false

[[bench]]
name = "counting_sort"
harness = false

[[bench]]
name = "gnome_sort"
harness = false

[[bench]]
name = "insertion_sort"
harness = false

[[bench]]
name = "merge_sort"
harness = false

[[bench]]
name = "quicksort"
harness = false

[[bench]]
name = "selection_sort"
harness = false

[[bench]]
name = "shell_sort"
harness = false

[[bench]]
name = "timsort"
harness = false
