[package]
name = "lc-1141-user-activity-for-the-past-30-days-i"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.2.0", default-features = false, features = [ "chrono", "postgres", "r2d2" ] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
r2d2 = "0.8.10"
