[package]
name = "lc-1965-employees-with-missing-information"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.2.2", default-features = false, features = [ "chrono", "postgres", "r2d2" ] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
r2d2 = "0.8.10"
